k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmu-fe-strategic
  labels:
    app: rmu-fe-strategic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmu-fe-strategic
  template:
    metadata:
      labels:
        app: rmu-fe-strategic
    spec:
      containers:
      - name: rmu-fe-strategic
        image: labcabrera/rmu-fe-strategic:latest
        ports:
        # - containerPort: 80
        - containerPort: 8082
