k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmu-fe-strategic-service
spec:
  selector:
    app: rmu-fe-strategic
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082
  type: ClusterIP
